# ros2-modular-robot-control

./: README.md
src/actuator_controller_cpp/: CMakeLists.txt  package.xml
src/actuator_controller_cpp/include/actuator_controller_cpp/: actuator_controller_node.hpp  safety_monitor.hpp
src/actuator_controller_cpp/src/: actuator_controller_node.cpp  main.cpp  safety_monitor.cpp
src/actuator_controller_cpp/test/: test_actuator_controller.cpp
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: actuator_controller.yaml  sensor_driver.yaml  state_machine.yaml
src/robot_bringup/launch/: lifecycle.launch.py  robot.launch.py  test_fault_injection.launch.py
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: ActuatorCommand.msg  ActuatorState.msg  RobotState.msg
src/robot_interfaces/srv/: SetActuatorEnabled.srv  TriggerStateTransition.srv
src/sensor_driver_cpp/: CMakeLists.txt  package.xml
src/sensor_driver_cpp/include/sensor_driver_cpp/: imu_sensor_node.hpp
src/sensor_driver_cpp/src/: imu_sensor_node.cpp  main.cpp
src/sensor_driver_cpp/test/: test_imu_sensor.cpp
src/state_machine_cpp/: CMakeLists.txt  package.xml
src/state_machine_cpp/include/state_machine_cpp/: robot_fsm.hpp  state_machine_node.hpp
src/state_machine_cpp/src/: main.cpp  robot_fsm.cpp  state_machine_node.cpp
src/state_machine_cpp/test/: test_robot_fsm.cpp
