<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>robot_bringup</n>
  <version>1.0.0</version>
  <description>
    Launch files, YAML parameter files, and system integration scripts
    for bringing up the complete modular robot control system.
  </description>
  <maintainer email="robotics@example.com">Robotics Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>sensor_driver_cpp</exec_depend>
  <exec_depend>actuator_controller_cpp</exec_depend>
  <exec_depend>state_machine_cpp</exec_depend>
  <exec_depend>robot_interfaces</exec_depend>
  <exec_depend>ros2lifecycle</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
